adds swagger documentation
